<resources>
    <string name="app_name">Waterloo Carpool</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    // added by Zizheng
    <string name="prompt_require_google_play">
        Sorry, this application is based on Firebase, thus it requires Google Play service to work properly.
    </string>
    <string name="prompt_login_loading">Login interface invoking, one more second…</string>
    <string name="title_activity_email_login">Sign in</string>

    <string name="action_email_sign_in">Sign in with email</string>
    <string name="action_google_sign_in">Sign in with Google</string>

    <string name="title_activity_main">Main</string>
    <string name="title_account_information">Account Information</string>

    <string name="title_driver">Driver</string>
    <string name="title_passenger">Passenger</string>
    <string name="title_trips_list">Trips</string>
    <string name="title_trip_details">Trip Details</string>

    <string name="prompt_departure_city">Departure City</string>

    <string-array name="departure_city">
        <item>Please Select the Departure City</item>
        <item>Waterloo</item>
        <item>Pearson Airport</item>
        <item>Toronto</item>
        <item>Mississauga</item>
        <item>Markham</item>
        <item>Hamilton</item>
        <item>London</item>
    </string-array>

    <string-array name="arrival_city">
        <item>Please Select the Arrival City</item>
        <item>Waterloo</item>
        <item>Pearson Airport</item>
        <item>Toronto</item>
        <item>Mississauga</item>
        <item>Markham</item>
        <item>Hamilton</item>
        <item>London</item>
    </string-array>

    <!-- dirver fragment -->
    <string name="prompt_specific_departure_address">Specific Departure Address</string>
    <string name="prompt_specific_arrival_address">Specific Arrival Address</string>
    <string name="prompt_phone_number">Phone Number</string>

    <string name="prompt_driver_departure_date">Departure Date (MM/dd hh:mm)</string>
    <string name="prompt_departure_date">Departure Date (MM/dd)</string>
    <string name="prompt_vacancies">Vacancies</string>
    <string name="prompt_price">Price per Person:</string>
    <string name="action_confirm">Confirm</string>

    <!-- passenger fragment -->
    <string name="prompt_number_of_people"># of People</string>

    <!-- passenger fragment -->
    <string name="nav_header_avatar">User Avatar</string>
    <string name="nav_header_nickname">Unknown</string>
    <string name="nav_header_email">unknown@somewhere.com</string>
    <string name="nav_title_exit">Exit</string>
    <string name="nav_title_trips">Trips</string>

    <!-- register activity -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="title_activity_register">Register</string>

    <!-- side navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Added by Zhilun Chang -->
    <!-- passenger fragment  -->
    <string name="nav_title_account_Info">Account</string>
    <string name="account_info_title_avatar">Avatar</string>
    <string name="action_choose">Choose Avatar</string>
    <string name="action_upload">Upload Avatar</string>

    <!-- Account info  -->
    <string name="account_info_title_first_name">First Name:</string>
    <string name="account_info_first_name">Your first name</string>
    <string name="account_info_title_last_name">Last Name:</string>
    <string name="account_info_last_name">Your Last name</string>
    <string name="account_info_title_email">Email:</string>
    <string name="account_info_email">Your Email</string>

    <!-- trip details -->
    <string name="prompt_departure_address">Departure Address:</string>
    <string name="prompt_arrival_address">Arrival Address:</string>
    <string name="prompt_contact">Contact:</string>
    <string name="prompt_departure_time">Departure Time:</string>
</resources>
