<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical">

    <ImageView
            android:id="@+id/account_info_imgView"
            android:layout_width="188dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/account_info_title_avatar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/account_info_title_first_name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_info_title_first_name"
                android:textSize="20sp"
                android:textColor="@color/colorInputDark"/>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/account_info_first_name"
                android:text="@string/account_info_first_name"
                android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/account_info_title_last_name"
                android:text="@string/account_info_title_last_name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorInputDark"/>

        <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_info_last_name"
                android:text="@string/account_info_last_name"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/account_info_title_email"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_info_title_email"
                android:textSize="20sp"
                android:textColor="@color/colorInputDark"/>

        <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_info_email"
                android:text="@string/account_info_email"
                android:textSize="20sp"/>

    </LinearLayout>

    <Button
            android:id="@+id/account_info_layout_button_btnChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_choose"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/account_info_layout_button_btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_upload"
            android:textStyle="bold"/>

</LinearLayout>


