<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/prompt_departure_time"
                android:textColor="@color/colorInputDark"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/departure_time"
                android:textSize="24sp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/prompt_departure_address"
                android:textColor="@color/colorInputDark"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/departureAddress"
                android:textSize="24sp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/prompt_arrival_address"
                android:textColor="@color/colorInputDark"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/arrivalAddress"
                android:textSize="24sp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/prompt_price"
                android:textColor="@color/colorInputDark"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/priceInformation"
                android:textSize="24sp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/prompt_contact"
                android:textColor="@color/colorInputDark"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/contactInformation"
                android:textSize="24sp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>